# able2flow

./: .env.sample  .gitignore  ANT_HILL_COMPLETE.md  CHANGELOG.md  README.md  STAGE5_TESTING.md  STAGE6_E2E_TESTS.md  TESTING_GUIDE.md  justfile  perf_test.py  run_test.sh  smoke_test.py  test_e2e.go  test_e2e.js  test_e2e_direct.py  test_e2e_simple.py  test_notifications.py  test_notifications.sh  vercel.json
app_docs/: context-menu-implementation-report.md  incident-templates-test-results.md  product-strategy-2026.md
apps/backend/: database.py  init_db.py  main.py  migrate_ant_hill.py  pyproject.toml
apps/backend/auth/: __init__.py  clerk_middleware.py  token_service.py  user_service.py
apps/backend/routers/: __init__.py  ai.py  attachments.py  audit.py  columns.py  comments.py  dashboard.py  events.py  gamification.py  incidents.py  monitors.py  notifications.py  projects.py  sla.py  tasks.py  time_tracking.py
apps/backend/routers/integrations/: __init__.py  calendar.py  docs.py  gmail.py  oauth.py  slack.py
apps/backend/services/: __init__.py  ai_triage_service.py  audit_service.py  event_store.py  gamification_service.py  monitor_service.py  sla_service.py  time_tracking_service.py
apps/backend/services/integrations/: __init__.py  calendar_service.py  docs_service.py  gmail_service.py  integration_settings_service.py  slack_service.py
apps/backend/tests/: __init__.py  conftest.py  test_advanced.py  test_tasks.py
apps/frontend/: .env.sample  package-lock.json  (+1 more)
docs/: DEMO_SCRIPT.md
specs/: context-menu-quick-win.md  incident-templates-quick-win.md
(+38 files in other folders)
