[project]
name = "flowable-backend"
version = "0.1.0"
description = "Flowable MVP - Task management + Monitoring/Incident response"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
