[project]
name = "able2flow-backend"
version = "0.2.0"
description = "Able2Flow MVP - Task management + Monitoring/Incident response with integrations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.2.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
